[package]
name = "rss-amcache"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0"
amcache-rs = { path = "../amcache-rs" }
csv = "1.3"
eframe = "0.33"
egui_extras = { version = "0.33", features = ["all_loaders"] }
image = { version = "0.25", default-features = false, features = ["ico", "png"] }
rayon = "1.10"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "macros"] }
yara-x = "0.7"

[dependencies.windows]
version = "0.62.2"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_System_SystemServices",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
winres = "0.1"
